<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="layout">LayoutExercise</string>
    <string name="smol1">Tabby</string>
    <string name="smol2">small</string>
    <string name="smol3">meer cat</string>
    <string name="smol4">Calico</string>
    <string name="smol5">Fat tabby</string>
    <string name="post1"></string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="btnexercise">Button Exercise</string>
    <string name="close">Close</string>
    <string name="toast">Toast</string>
    <string name="chbg">Change BG</string>
    <string name="chbtnbg">Change Button BG</string>
    <string name="disappear">Disappear</string>
    <string name="returns">RETURN</string>
    <string name="bob">Bob</string>
    <string name="sphinx">Sphinx</string>
    <string name="dog">Dog</string>
    <string name="big_eyes">Big Eyes</string>
    <string name="tabby">Tabby</string>
    <string name="orange">Orange</string>
    <string name="very_orange">Very Orange</string>
    <string name="cat">Cat</string>
    <string name="white_cat">White Cat</string>
    <string name="tabbbbb">Tabby</string>
    <string name="calculator">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="Match3">Match 3</string>
    <string name="Restart">Restart</string>
    <string name="PassingIntents">PassingIntentsExercise</string>
    <string name="PassingIntents2">PassingIntentsExercise2</string>
    <string name="student_registration_form">Student Registration Form</string>
    <string name="fullname">FullName</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">BirthDate</string>
    <string name="submit">Submit</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="father_s_first_name">Father\'s First Name</string>
    <string name="father_s_last_name">Father\'s Last Name</string>
    <string name="mother_s_first_name">Mother\'s First Name</string>
    <string name="mother_s_last_name">Mother\'s Last Name</string>
    <string name="clear">Clear</string>
    <string name="year_level">Year Level</string>
    <string name="enter_year_level">Enter Year Level</string>
</resources>